// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render form is closed 1`] = `
"<div className=\\"feedback-container\\">
  <Transition in={false} timeout={500} mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true} onEnter={[Function: noop]} onEntering={[Function: noop]} onEntered={[Function: noop]} onExit={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
    [function]
  </Transition>
  <Modal open={false} onClose={[Function: Function]} size=\\"small\\" className=\\"feedback-modal-container\\" centered={true} dimmer={true} closeOnDimmerClick={true} closeOnDocumentClick={false} eventPool=\\"Modal\\">
    <Header icon=\\"mail\\" content=\\"Search NEU Contact Form\\" />
    <ModalContent className=\\"formModalContent\\">
      <Form as=\\"form\\">
        <div className=\\"feedbackParagraph\\">
          Find a bug in Search NEU? Find a query that doesn&#39;t come up with the results you were looking for? Have an idea for an improvement or just want to say hi? Drop a line below! Feel free to write whatever you want to and someone on the team will read it.
        </div>
        <TextArea name=\\"response\\" form=\\"feedbackForm\\" className=\\"feedbackTextbox\\" onChange={[Function: bound onTextAreaChange]} as=\\"textarea\\" rows={3} />
        <p>
          By default this form is anonymous. Leave your name and/or email if you want us to be able to contact you.
        </p>
        <Input name=\\"contact\\" form=\\"feedbackForm\\" className=\\"formModalInput\\" onChange={[Function: bound onContactChange]} type=\\"text\\" />
      </Form>
    </ModalContent>
    <ModalActions>
      <Button basic={true} color=\\"red\\" onClick={[Function: Function]} as=\\"button\\">
        <Icon name=\\"remove\\" as=\\"i\\" />
        Cancel
      </Button>
      <Button type=\\"submit\\" color=\\"green\\" form=\\"feedbackForm\\" onClick={[Function: bound onSubmit]} disabled={false} as=\\"button\\">
        <Icon name=\\"checkmark\\" as=\\"i\\" />
        Submit
      </Button>
    </ModalActions>
  </Modal>
</div>"
`;

exports[`should render the form 1`] = `
"<div className=\\"feedback-container\\">
  <Transition in={false} timeout={500} mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true} onEnter={[Function: noop]} onEntering={[Function: noop]} onEntered={[Function: noop]} onExit={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
    [function]
  </Transition>
  <Modal open={true} onClose={[Function: Function]} size=\\"small\\" className=\\"feedback-modal-container\\" centered={true} dimmer={true} closeOnDimmerClick={true} closeOnDocumentClick={false} eventPool=\\"Modal\\">
    <Header icon=\\"mail\\" content=\\"Search NEU Contact Form\\" />
    <ModalContent className=\\"formModalContent\\">
      <Form as=\\"form\\">
        <div className=\\"feedbackParagraph\\">
          Find a bug in Search NEU? Find a query that doesn&#39;t come up with the results you were looking for? Have an idea for an improvement or just want to say hi? Drop a line below! Feel free to write whatever you want to and someone on the team will read it.
        </div>
        <TextArea name=\\"response\\" form=\\"feedbackForm\\" className=\\"feedbackTextbox\\" onChange={[Function: bound onTextAreaChange]} as=\\"textarea\\" rows={3} />
        <p>
          By default this form is anonymous. Leave your name and/or email if you want us to be able to contact you.
        </p>
        <Input name=\\"contact\\" form=\\"feedbackForm\\" className=\\"formModalInput\\" onChange={[Function: bound onContactChange]} type=\\"text\\" />
      </Form>
    </ModalContent>
    <ModalActions>
      <Button basic={true} color=\\"red\\" onClick={[Function: Function]} as=\\"button\\">
        <Icon name=\\"remove\\" as=\\"i\\" />
        Cancel
      </Button>
      <Button type=\\"submit\\" color=\\"green\\" form=\\"feedbackForm\\" onClick={[Function: bound onSubmit]} disabled={false} as=\\"button\\">
        <Icon name=\\"checkmark\\" as=\\"i\\" />
        Submit
      </Button>
    </ModalActions>
  </Modal>
</div>"
`;
